Web Admin Console: final polish, minimal banner, responsive model grid, bottom-left controls, all requested UI/UX refinements

--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
         .container {
             position: relative;
             z-index: 2;
-            height: 100vh;
+            height: calc(100vh - 60px);
             display: flex;
             flex-direction: column;
             padding: 20px;
@@ -49,7 +49,6 @@
         .header {
             text-align: center;
             margin-bottom: 30px;
-            border-bottom: 2px solid #00ff41;
             padding-bottom: 20px;
         }
 
@@ -62,6 +61,12 @@
         .subtitle {
             font-size: 1.2em;
             color: #00cc33;
+        }
+
+        .banner {
+            max-width: 30%;
+            height: auto;
+            margin-bottom: 20px;
         }
 
         .controls-section {
@@ -224,13 +229,66 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            min-height: 300px;
         }
 
         .models-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
             padding: 20px;
+            min-height: 200px;
+            justify-items: center;
+        }
+
+        /* Specific layouts for different model counts */
+        .models-grid[data-count="1"] {
+            grid-template-columns: 1fr;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        .models-grid[data-count="2"] {
+            grid-template-columns: repeat(2, 1fr);
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .models-grid[data-count="3"] {
+            grid-template-columns: repeat(3, 1fr);
+            max-width: 900px;
+            margin: 0 auto;
+        }
+
+        .models-grid[data-count="4"] {
+            grid-template-columns: repeat(4, 1fr);
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .models-grid[data-count="5"] {
+            grid-template-columns: repeat(3, 1fr);
+            max-width: 900px;
+            margin: 0 auto;
+        }
+
+        .models-grid[data-count="6"] {
+            grid-template-columns: repeat(3, 1fr);
+            max-width: 900px;
+            margin: 0 auto;
+        }
+
+        /* For 5 models, align the last 2 to the left */
+        .models-grid[data-count="5"] .model-card:nth-child(4),
+        .models-grid[data-count="5"] .model-card:nth-child(5) {
+            justify-self: start;
+        }
+
+        /* For 6 models, center the last 3 */
+        .models-grid[data-count="6"] .model-card:nth-child(4),
+        .models-grid[data-count="6"] .model-card:nth-child(5),
+        .models-grid[data-count="6"] .model-card:nth-child(6) {
+            justify-self: center;
         }
 
         .model-card {
@@ -241,6 +299,10 @@
             position: relative;
             transition: all 0.3s ease;
             box-shadow: 0 0 20px rgba(255, 140, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 120px;
         }
 
         .model-card:hover {
@@ -267,7 +329,7 @@
 
         .model-header {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             margin-bottom: 15px;
         }
@@ -276,6 +338,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
+            justify-content: flex-start;
         }
 
         .settings-cog {
@@ -316,6 +379,8 @@
             background: #1a1a1a;
             border: 1px solid #ff8c00;
             color: #ff8c00;
+            min-width: 80px;
+            text-align: center;
         }
 
         .model-status.active {
@@ -576,8 +641,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="title">HEY ORAC</h1>
-            <p class="subtitle">Wake Word Detection Monitor</p>
+            <img src="assets/images/HeyORAC_Banner.png" alt="Hey Orac" class="banner">
         </div>
 
         <div class="controls-section">
@@ -616,7 +680,6 @@
             </div>
 
             <div class="models-section">
-                <h2 style="text-align: center; margin-bottom: 20px; color: #00cc33;">DETECTION MODELS</h2>
                 <div class="models-grid" id="modelsGrid">
                     <!-- Models will be dynamically generated here -->
                 </div>
@@ -690,6 +753,9 @@
         function generateModelCards() {
             const modelsGrid = document.getElementById('modelsGrid');
             modelsGrid.innerHTML = '';
+            
+            // Set the data-count attribute for layout
+            modelsGrid.setAttribute('data-count', sampleModels.length);
 
             sampleModels.forEach(model => {
                 const modelCard = document.createElement('div');
@@ -699,12 +765,12 @@
                 modelCard.innerHTML = `
                     <div class="model-header">
                         <span class="model-name">${model.name}</span>
-                        <div class="model-controls">
-                            <span class="model-status ${model.active ? 'active' : ''}">${model.active ? 'ACTIVE' : 'INACTIVE'}</span>
-                            <svg class="settings-cog" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.22,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.22,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.68 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
-                            </svg>
-                        </div>
+                    </div>
+                    <div class="model-controls">
+                        <span class="model-status ${model.active ? 'active' : ''}">${model.active ? 'ACTIVE' : 'INACTIVE'}</span>
+                        <svg class="settings-cog" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.22,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.22,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.68 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
+                        </svg>
                     </div>
                 `;
 
