--- a/web/index.html
+++ b/web/index.html
@@ -371,56 +371,33 @@
         }
 
         .model-card {
-            background: #1a1a1a;
-            border: 2px solid #333;
-            border-radius: 12px;
-            padding: 25px;
-            transition: all 0.3s ease;
-            cursor: pointer;
+            background: linear-gradient(145deg, #1a1a1a, #0d0d0d);
+            border: 2px solid #ff8c00;
+            border-radius: 8px;
+            padding: 20px;
             position: relative;
-            overflow: hidden;
-        }
-
-        .model-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 3px;
-            background: linear-gradient(90deg, #00cc33, #00ff66);
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 20px rgba(255, 140, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            min-height: 120px;
         }
 
         .model-card:hover {
-            border-color: #00cc33;
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(0, 204, 51, 0.25);
-        }
-
-        .model-card:hover::before {
-            transform: scaleX(1);
+            box-shadow: 0 0 30px rgba(255, 140, 0, 0.4);
+            transform: translateY(-2px);
         }
 
         .model-card.active {
-            border-color: #00cc33;
-            background: linear-gradient(135deg, #1a1a1a 0%, #0d2b0d 100%);
-            box-shadow: 0 8px 25px rgba(0, 204, 51, 0.4);
-        }
-
-        .model-card.active::before {
-            transform: scaleX(1);
+            border-color: #00ff41;
+            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
         }
 
         .model-card.detected {
-            animation: detection-pulse 0.6s ease-in-out;
-        }
-
-        @keyframes detection-pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); box-shadow: 0 0 40px rgba(0, 204, 51, 0.9); }
-            100% { transform: scale(1); }
+            animation: pulse 0.5s ease-in-out;
+            border-color: #ff0066;
+            box-shadow: 0 0 40px rgba(255, 0, 102, 0.8);
         }
 
         @keyframes pulse {
@@ -443,46 +420,51 @@
         }
 
         .settings-cog {
-            width: 22px;
-            height: 22px;
-            color: #666;
+            width: 20px;
+            height: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
-            padding: 2px;
-            border-radius: 4px;
+            filter: drop-shadow(0 0 5px currentColor);
         }
 
         .settings-cog:hover {
-            color: #00cc33;
             transform: rotate(90deg);
-            background: rgba(0, 204, 51, 0.1);
+            filter: drop-shadow(0 0 10px currentColor);
+        }
+
+        .model-card .settings-cog {
+            color: #ff8c00;
+        }
+
+        .model-card.active .settings-cog {
+            color: #00ff41;
         }
 
         .model-name {
-            font-size: 1.2em;
-            font-weight: 700;
-            color: #ffffff;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
+            font-size: 1.3em;
+            font-weight: bold;
+            text-shadow: 0 0 5px #ff8c00;
+        }
+
+        .model-card.active .model-name {
+            text-shadow: 0 0 5px #00ff41;
         }
 
         .model-status {
-            font-size: 0.75em;
-            padding: 6px 12px;
-            border-radius: 20px;
-            background: #333;
-            color: #888;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            font-weight: 600;
-            border: 1px solid #444;
+            font-size: 0.9em;
+            padding: 5px 10px;
+            border-radius: 4px;
+            background: #1a1a1a;
+            border: 1px solid #ff8c00;
+            color: #ff8c00;
+            min-width: 80px;
+            text-align: center;
         }
 
         .model-status.active {
-            background: linear-gradient(135deg, #00cc33, #00ff66);
+            background: #00ff41;
+            border-color: #00ff41;
             color: #000;
-            border-color: #00ff66;
-            box-shadow: 0 2px 8px rgba(0, 204, 51, 0.3);
         }
 
         .model-sensitivity {
