--- a/web/index.html
+++ b/web/index.html
@@ -270,7 +270,7 @@
         }
 
         .model-status.inactive {
-            color: #666;
+            color: #ff8c00;
         }
 
         .model-file {
@@ -384,6 +384,20 @@
             min-height: 120px;
         }
 
+        .model-card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .model-card-footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: auto;
+        }
+
         .model-card:hover {
             box-shadow: 0 0 30px rgba(255, 140, 0, 0.4);
             transform: translateY(-2px);
@@ -425,6 +439,7 @@
             cursor: pointer;
             transition: all 0.3s ease;
             filter: drop-shadow(0 0 5px currentColor);
+            margin-left: auto;
         }
 
         .settings-cog:hover {
@@ -443,10 +458,12 @@
         .model-name {
             font-size: 1.3em;
             font-weight: bold;
+            color: #ff8c00;
             text-shadow: 0 0 5px #ff8c00;
         }
 
         .model-card.active .model-name {
+            color: #00ff41;
             text-shadow: 0 0 5px #00ff41;
         }
 
@@ -459,6 +476,7 @@
             color: #ff8c00;
             min-width: 80px;
             text-align: center;
+            margin-left: auto;
         }
 
         .model-status.active {
@@ -914,18 +932,17 @@
                     modelCard.dataset.modelName = model.name;
                     
                     modelCard.innerHTML = `
-                        <div class="model-header">
-                            <span class="model-name">${model.name}</span>
-                        </div>
-                        <div class="model-controls">
-                            <span class="model-status ${isActive ? 'active' : 'inactive'}">
-                                ${isActive ? 'ACTIVE' : 'INACTIVE'}
-                            </span>
+                        <div class="model-card-header">
+                            <div class="model-name">${model.name}</div>
                             <svg class="settings-cog" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.22,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.22,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.68 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
                             </svg>
                         </div>
-                        <div class="model-file">${model.file}</div>
+                        <div class="model-card-footer">
+                            <div class="model-status ${isActive ? 'active' : 'inactive'}">
+                                ${isActive ? 'ACTIVE' : 'INACTIVE'}
+                            </div>
+                        </div>
                     `;
                     
                     // Add click handler for card (but not settings cog)
