Fix WebSocket RMS streaming and volume display segments

--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -790,18 +790,20 @@
 
             <div class="volume-meter-container">
                 <div class="volume-meter" id="volume-meter">
-                    <div class="segment volume-segment"></div>
-                    <div class="segment volume-segment"></div>
-                    <div class="segment volume-segment"></div>
-                    <div class="segment volume-segment amber"></div>
-                    <div class="segment volume-segment amber"></div>
-                    <div class="segment volume-segment amber"></div>
-                    <div class="segment volume-segment green"></div>
-                    <div class="segment volume-segment green"></div>
-                    <div class="segment volume-segment green"></div>
-                    <div class="segment volume-segment red"></div>
-                    <div class="segment volume-segment red"></div>
-                    <div class="segment volume-segment red"></div>
+                    <div class="volume-segments">
+                        <div class="volume-segment"></div>
+                        <div class="volume-segment"></div>
+                        <div class="volume-segment"></div>
+                        <div class="volume-segment amber"></div>
+                        <div class="volume-segment amber"></div>
+                        <div class="volume-segment amber"></div>
+                        <div class="volume-segment green"></div>
+                        <div class="volume-segment green"></div>
+                        <div class="volume-segment green"></div>
+                        <div class="volume-segment red"></div>
+                        <div class="volume-segment red"></div>
+                        <div class="volume-segment red"></div>
+                    </div>
                 </div>
                 <div class="volume-labels">
                     <span>Low</span>
