--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -165,7 +165,7 @@
 
         .volume-segment {
             flex: 1;
-            background: #1a1a1a;
+            background: #000000;
             border: 1px solid #333;
             border-radius: 2px;
             transition: all 0.1s ease;
@@ -176,21 +176,21 @@
             box-shadow: 0 0 10px currentColor;
         }
 
-        .volume-segment.amber {
-            background: linear-gradient(145deg, #cc7000, #b35a00);
-            border-color: #cc7000;
-            color: #cc7000;
-            box-shadow: 0 0 10px rgba(204, 112, 0, 0.6);
+        .volume-segment.active.amber {
+            background: linear-gradient(145deg, #90EE90, #7FDD7F);
+            border-color: #90EE90;
+            color: #90EE90;
+            box-shadow: 0 0 10px rgba(144, 238, 144, 0.6);
         }
 
-        .volume-segment.green {
-            background: linear-gradient(145deg, #00ff41, #00cc33);
-            border-color: #00ff41;
-            color: #00ff41;
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.8);
+        .volume-segment.active.green {
+            background: linear-gradient(145deg, #90EE90, #7FDD7F);
+            border-color: #90EE90;
+            color: #90EE90;
+            box-shadow: 0 0 20px rgba(144, 238, 144, 0.8);
         }
 
-        .volume-segment.red {
+        .volume-segment.active.red {
             background: linear-gradient(145deg, #ff0066, #cc0052);
             border-color: #ff0066;
             color: #ff0066;
