Make cell borders 50% transparent

--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -166,7 +166,7 @@
         .volume-segment {
             flex: 1;
             background: #000000;
-            border: 1px solid #556B55;
+            border: 1px solid rgba(85, 107, 85, 0.5);
             border-radius: 2px;
             transition: all 0.1s ease;
             position: relative;
