Implement logarithmic volume display with max value 5000

--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -809,9 +809,9 @@
                     </div>
                 </div>
                 <div class="volume-labels">
-                    <span>Low</span>
-                    <span>Medium</span>
-                    <span>High</span>
+                    <span>0.1</span>
+                    <span>50</span>
+                    <span>5000</span>
                 </div>
                 <div class="volume-info">
                     <span id="currentRms">Current RMS: 0</span>
