--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -454,26 +454,26 @@
             100% { transform: scale(1); }
         }
 
-        .model-header {
+        .model-name-header {
+            margin-bottom: auto;
+        }
+
+        .model-footer {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .model-controls {
-            display: flex;
-            align-items: center;
-            gap: 12px;
+            margin-top: 20px;
         }
 
         .settings-cog {
-            width: 20px;
-            height: 20px;
+            background: none;
+            border: none;
             cursor: pointer;
             transition: all 0.3s ease;
             filter: drop-shadow(0 0 5px currentColor);
-            margin-left: auto;
+            padding: 0;
+            display: flex;
+            align-items: center;
         }
 
         .settings-cog:hover {
@@ -501,22 +501,30 @@
             text-shadow: 0 0 5px #00ff41;
         }
 
-        .model-status {
+        .activate-btn {
             font-size: 0.9em;
-            padding: 5px 10px;
+            padding: 5px 12px;
             border-radius: 4px;
             background: #1a1a1a;
             border: 1px solid #ff8c00;
             color: #ff8c00;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Courier New', monospace;
+            text-transform: uppercase;
+            letter-spacing: 1px;
             min-width: 80px;
             text-align: center;
-            margin-left: auto;
         }
 
-        .model-status.active {
+        .activate-btn.active {
             background: #00ff41;
             border-color: #00ff41;
             color: #000;
+        }
+
+        .activate-btn:hover {
+            box-shadow: 0 0 10px currentColor;
         }
 
         .model-sensitivity {
