--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -141,7 +141,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 30px;
+            margin-bottom: 0px;
+            margin-top: 0px;
             width: 100%;
         }
 
