--- a/src/hey_orac/web/static/index.html
+++ b/src/hey_orac/web/static/index.html
@@ -889,7 +889,7 @@
                 </div>
             </div>
             <div class="modal-actions">
-                <button type="button" class="btn" onclick="closeVolumeSettings()">Close</button>
+                <button type="button" class="btn" onclick="closeGlobalSettings()">Close</button>
             </div>
         </div>
     </div>
